2008-05-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/include/yarp/dev/PolyDriver.h: added private
	copy constructor / assignment operators to catch accidental
	copies.  PolyDriver objects cannot be copied. 
	Closes bug 1968253.

2008-05-19  Lorenzo Natale <nat@liralab.it>
	* src/libYARP_OS/src/Stamp.cpp: Stamp::update() now stores absolute
	time.

2008-05-16  Lorenzo Natale <nat@liralab.it>
	* src/libYARP_dev/src/RemoteControlBoard.cpp: added timestamps to 
	state:o port

2008-05-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/PortTest.cpp: add regression test
	for new acquire/release methods.

	* src/libYARP_OS/include/yarp/os/BufferedPort.h: expose
	new acquire/release methods in normal user interface.

	* src/libYARP_OS/include/yarp/os/PortReaderBuffer.h: add 
	acquire/release methods to allow user to hold onto objects
	read for as long as they want.

2008-05-06  Lorenzo Natale  <nat@liralab.it>
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h:
	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
	ImplementPidControlRaw,
	ImplementEncodersRaw, 
	ImplementPositionControlRaw,
	renamed to:
	StubImplPidControlRaw,
	StubImplEncodersRaw,
	StubImplPositionControlRaw,
	added documentation and cleaned a little bit the code.

2008-05-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/RemoteControlBoard.cpp: clearer error
	messages when there's problems connecting to a remote device.

2008-04-18  Lorenzo Natale  <nat@liralab.it>
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h:
	ImplementPidControlRaw, 
	ImplementEncodersRaw, 
	ImplementPositionControlRaw,
	cointaining default implementation for respective interfaces.

2008-04-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/FindFFMPEG.cmake: prioritize FFMPEG_DIR over global
	installation, when defined.

2008-04-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
